# Digit-Recognition-NN

./: README.md  dr_nn.ipynb  pyproject.toml
models/2_HL_NN_v1/: checkpoint.pth  metadata.json
models/2_HL_NN_v2/: checkpoint.pth  metadata.json
models/2_HL_NN_v3/: checkpoint.pth  metadata.json
models/2_HL_NN_v4/: checkpoint.pth  metadata.json
models/2_HL_NN_v5/: checkpoint.pth  metadata.json
models/2_HL_NN_v6/: checkpoint.pth  metadata.json
models/2_HL_NN_v7/: checkpoint.pth  metadata.json
models/2_HL_NN_v8/: checkpoint.pth  metadata.json
models/3_HL_NN_v1/: checkpoint.pth  metadata.json
models/3_HL_NN_v2/: checkpoint.pth  metadata.json
models/3_HL_NN_v3/: checkpoint.pth  metadata.json
models/3_HL_NN_v4/: checkpoint.pth  metadata.json
models/3_HL_NN_v5/: metadata.json
