[project]
name = "digit-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
]



[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
# This ensures PyTorch is the only thing we pull from here
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
